--- a/themes/hexo-theme-matery/layout/404.ejs
+++ b/themes/hexo-theme-matery/layout/404.ejs
@@ -1,7 +1,8 @@
+<!-- 404-page -->
 <style type="text/css">
     /* don't remove. */
     .about-cover {
-        height: 90.2vh;
+        height: 100vh;
     }
 </style>
 <div class="bg-cover pd-header about-cover">
@@ -10,14 +11,14 @@
             <div class="col s10 offset-s1 m8 offset-m2 l8 offset-l2">
                 <div class="brand">
                     <div class="title center-align">
-                        404 Sorry 您找的页面不存在！
+                        404
                     </div>
-                    <div class="title center-align">
+                    <!-- <div class="title center-align">
                         试试右上角的<span style="color:blue;font-weight:bold">搜索</span>功能？
                     </div>
                     <div class="title center-align">
                         <a href="/" target="_blank">返回首页</a>
-                    </div>
+                    </div> -->
                     <div class="description center-align">
                         <%= page.description %>
                     </div>
@@ -27,7 +28,7 @@
     </div>
 </div>
 
-<% if (theme.banner.enable) { %>
+<!-- <% if (theme.banner.enable) { %>
     <script>
         // 每天切换 banner 图.  Switch banner image every day.
         var bannerUrl = "<%- theme.jsDelivr.url %><%- url_for('/medias/banner/') %>" + new Date().getDay() + '.jpg';
@@ -37,4 +38,4 @@
     <script>
         $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %><%- url_for('/medias/banner/0.jpg') %>)');
     </script>
-<% } %>
+<% } %> -->
