--- a/themes/hexo-theme-matery/layout/_partial/all_btn.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/all_btn.ejs
@@ -1,3 +1,7 @@
+<!-- 深色模式按钮 -->
+<a onclick="switchNightMode()" id="sma" title="模式切换">
+    <i class="fa fa-moon" id="nightMode" aria-hidden="true"></i>
+</a>
 <!-- 回到顶部按钮 -->
 <div id="backTop" class="top-scroll">
     <a class="btn-floating btn-large waves-effect waves-light" href="#!">
