--- a/themes/hexo-theme-matery/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/footer.ejs
@@ -1,10 +1,9 @@
-<footer class="page-footer bg-color">
+<footer class="page-footer bg-footer-color">
     <% if (theme.music.enable && theme.music.fixed) { %>
         <%- partial('_widget/music') %>
     <% } %>
 
-    <div class="container row center-align"
-         style="margin-bottom: <% if (theme.time.enable) { %>15<% } else { %>0<% } %>px !important;">
+    <div class="container row center-align" style="margin-bottom: <% if (theme.time.enable) { %>15<% } else { %>0<% } %>px !important;">
         <div class="col s12 m8 l8 copy-right">
             Copyright&nbsp;&copy;
             <% if (theme.time.year !== new Date().getFullYear()) { %>
