--- a/themes/hexo-theme-matery/layout/about.ejs
+++ b/themes/hexo-theme-matery/layout/about.ejs
@@ -1,7 +1,7 @@
 <style type="text/css">
     /* don't remove. */
     .about-cover {
-        height: 75vh;
+        height: 50vh;
     }
 </style>
 
@@ -19,8 +19,7 @@
                     <div class="col s12 m12 l4">
                         <div class="profile center-align">
                             <div class="avatar">
-                                <img src="<%- theme.jsDelivr.url %><%- url_for(theme.profile.avatar) %>" alt="<%- config.author %>"
-                                     class="circle responsive-img avatar-img">
+                                <img src="<%- theme.jsDelivr.url %><%- url_for(theme.profile.avatar) %>" alt="<%- config.author %>" class="circle responsive-img avatar-img">
                             </div>
                             <div class="author">
                                 <div class="post-statis hide-on-large-only" data-aos="zoom-in-right">
